--- a/Final_Project.Rmd
+++ b/Final_Project.Rmd
@@ -14,6 +14,10 @@ df <- read_csv("data/AIDS_Clinical_Trials_Group175.csv")
 
 # Methods
 
+## Study Data
+
+## Statistical Methods
+
 # Results
 
 # Interpretation & Discussion
