--- a/Non_parametric_Yixuan.Rmd
+++ b/Non_parametric_Yixuan.Rmd
@@ -24,8 +24,11 @@ km_fit_trt %>% ggsurvplot(data = aids,
                       fun = "pct", #can be replaced by cum hazard
                       conf.int = TRUE,
                       risk.table = TRUE,
+                      pval = TRUE,  
+                      pval.coord = c(0,55),
                       fontsize = 2,
                       ggtheme = theme_light(),
+                      xlab =  "Time in days",
                       title = "Kaplan-Meier Survival Function Estimate",
                       legend.title = "",
                       legend.labs = c("ZDV only","ZDV + ddl", "ZDV + Zal", "ddl only"),
@@ -40,7 +43,7 @@ fh_fit_trt %>% ggsurvplot(data = aids,
                       conf.int = TRUE,
                       risk.table = TRUE,
                       pval = TRUE,  
-                      pval.cord = c(0,60),
+                      pval.coord = c(0,55),
                       fontsize = 2,
                       ggtheme = theme_light(),
                       xlab =  "Time in days",
