--- a/hongpu.Rmd
+++ b/hongpu.Rmd
@@ -21,7 +21,7 @@ aids = read_csv("data/AIDS_Clinical_Trials_Group175.csv") %>% mutate(trt = as.fa
                                                                      race = as.factor(race),
                                                                      gender = as.factor(gender),
                                                                      str2 = as.factor(str2),
-                                                                     symptom = as.factor(symptom)) %>% select(time, cid, trt, age, wtkg, hemo, homo, drugs, karnof, race, gender, str2, symptom, cd40, cd80) %>% arrange(time)
+                                                                     symptom = as.factor(symptom)) %>% select(time, cid, trt, age, wtkg, hemo, homo, drugs, karnof, race, gender, str2, symptom, cd40, cd80) %>% arrange(time) %>% drop_na()
 ```
 
 #### model selection
@@ -40,22 +40,29 @@ selectCox(Surv(time, cid) ~ trt + hemo + drugs + karnof + str2 + symptom + cd40 
 $In
 [1] "trt"     "drugs"   "karnof"  "str2"    "symptom" "cd40"    "cd80"  
 
-*combine model*
+*selection with interaction*
 ```{r}
-cox1 = coxph(Surv(time, cid) ~ trt + age + drugs + karnof + str2 + symptom + cd40 + cd80, data = aids)
+selectCox(Surv(time, cid) ~ trt + drugs + karnof + str2 + symptom + cd40 + cd80 + age + age * drugs + age * trt, data = aids, rule = "aic")
+```
+$In
+[1] "trt"         "karnof"      "str2"        "symptom"     "cd40"        "cd80"        "drugs * age"
+
+*final model*
+```{r}
+cox1 = coxph(Surv(time, cid) ~ trt + karnof + str2 + symptom + cd40 + cd80 + age * drugs, data = aids)
 ```
 
 ```{r}
 summary(cox1)
 ```
 
-*model with age_group*
+*final model with age_group*
 ```{r}
 aids = aids %>% mutate(age_group = as.factor(ifelse(age >= 11 & age <= 30, "11-30", ifelse(age >= 31 & age <= 50, "31-50", "51-70"))))
 ```
 
 ```{r}
-cox2 = coxph(Surv(time, cid) ~ trt + age_group + drugs + karnof + str2 + symptom + cd40 + cd80, data = aids)
+cox2 = coxph(Surv(time, cid) ~ trt + age_group + drugs + karnof + str2 + symptom + cd40 + cd80 + age_group * drugs, data = aids)
 ```
 
 ```{r}
@@ -83,11 +90,11 @@ main = "Log-Log Survival Curves")
 
 *Plot the observed and fitted*
 ```{r}
-sf = survfit(Surv(time, cid) ~ trt + age_group + drugs + karnof + str2 + symptom + cd40 + cd80, data = aids)
-
-plot(sf,
+plot(survfit(Surv(time, cid) ~ 1, data = aids),
+conf.int = FALSE,
 col = 1,
 lty = 1,
+ylim = c(0.55,1),
 xlab = "Time",
 ylab = "Survival Probability",
 main = "Observed vs Fitted Survival Curves")
@@ -95,11 +102,14 @@ main = "Observed vs Fitted Survival Curves")
 lines(survfit(cox2),
 conf.int = FALSE,
 col = 2,
-lty = 2)
+lty = 2,
+ylim = c(0.55,1))
 
 legend("bottomleft",
 legend = c("KM", "Cox"),
+col = 1:2,
 lty = c(1, 2),
+cex = 0.5,
 merge = TRUE)
 ```
 
