update table in appendix

--- a/Appendix.Rmd
+++ b/Appendix.Rmd
@@ -214,7 +214,7 @@ hkm
 
 
 ```{r}
-quantile(km_fit_trt,probs = c(0.1,0.15,0.2))$quantile %>% knitr::kable(caption = "t1")
+quantile(km_fit_trt,probs = c(0.1,0.15,0.2))
 ```
 Table: Quantile Survival Time (in days) by Treatments
 
@@ -581,18 +581,18 @@ broom::tidy(cox2) %>%
 
 Table: Summary of Final Cox-PH model
 
-|term                  |   estimate| exp(estimate)| std.error|  statistic|   p.value|
-|:---------------------|----------:|-------------:|---------:|----------:|---------:|
-|trt1                  | -0.8001201|     0.4492750| 0.1242171| -6.4413036| <0.0000001|
-|trt2                  | -0.6657643|     0.5138806| 0.1216476| -5.4728949| <0.0000001|
-|trt3                  | -0.5673093|     0.5670492| 0.1159872| -4.8911374| 0.0000010|
+|Term         |   Estimate| exp(Estimate)| std.error|  Test Statistic|   P-value|
+|:------------|----------:|-------------:|---------:|----------:|:---------|
+|trt1                  | -0.8001201|     0.4492750| 0.1242171| -6.4413036| <0.0000001$^{***}$|
+|trt2                  | -0.6657643|     0.5138806| 0.1216476| -5.4728949| <0.0000001$^{***}$|
+|trt3                  | -0.5673093|     0.5670492| 0.1159872| -4.8911374| 0.0000010$^{***}$|
 |age_group31-50        | -0.0962569|     0.9082307| 0.1037108| -0.9281280| 0.3533412|
 |age_group51-70        |  0.3463719|     1.4139283| 0.1901102|  1.8219527| 0.0684622|
 |drugs1                | -0.3664675|     0.6931787| 0.3445059| -1.0637481| 0.2874428|
-|karnof                | -0.0238122|     0.9764691| 0.0070067| -3.3984920| 0.0006776|
-|str21                 |  0.3772408|     1.4582554| 0.0959051|  3.9334819| 0.0000837|
-|symptom1              |  0.4363595|     1.5470649| 0.1030943|  4.2326242| 0.0000231|
-|cd40                  | -0.0041861|     0.9958226| 0.0004476| -9.3526642| <0.0000001|
-|cd80                  |  0.0004689|     1.0004690| 0.0000830|  5.6524859| <0.0000001|
+|karnof                | -0.0238122|     0.9764691| 0.0070067| -3.3984920| 0.0006776$^{***}$|
+|str21                 |  0.3772408|     1.4582554| 0.0959051|  3.9334819| 0.0000837$^{***}$|
+|symptom1              |  0.4363595|     1.5470649| 0.1030943|  4.2326242| 0.0000231$^{***}$|
+|cd40                  | -0.0041861|     0.9958226| 0.0004476| -9.3526642| <0.0000001$^{***}$|
+|cd80                  |  0.0004689|     1.0004690| 0.0000830|  5.6524859| <0.0000001$^{***}$|
 |age_group31-50:drugs1 |  0.0704626|     1.0730045| 0.3831692|  0.1838943| 0.8540964|
 |age_group51-70:drugs1 |  0.4512700|     1.5703052| 0.6975511|  0.6469347| 0.5176742|
